# Niord

./: README.md  docker-compose.yml
Niord/: app.json  package-lock.json  package.json  settings.gradle.kts
Niord/app/: build.gradle.kts
Niord/app/src/main/: AndroidManifest.xml
Niord/app/src/main/res/color/: switch_thumb_color.xml  switch_track_color.xml
Niord/app/src/main/res/drawable/: bg_button_primary.xml  bg_caixa_texto.xml  bg_onboarding_skip.xml  button_rounded_blue.xml  ic_account_circle.xml  ic_arrow_down.xml  ic_business.xml  ic_chat.xml  ic_check.xml  ic_contact_avatar.xml  ic_edit.xml  ic_launcher_background_niord.xml  ic_launcher_foreground_inset.xml  ic_phone.xml  ic_radio_button.xml  ic_search.xml  ic_sparkles.xml  ic_splash_foreground.xml  selector_item_bg.xml
Niord/app/src/main/res/layout/: account_data.xml  account_security.xml  acompanhamento_medico.xml  acompanhamento_policial.xml  activity_main.xml  activity_otp.xml  adicionar_seguradora.xml  cadastro.xml  configuracao.xml  contatos_emergencia.xml  login.xml  (+7 more)
Niord/gradle/: libs.versions.toml
Niord/gradle/wrapper/: gradle-wrapper.properties
Niord/src/app/: index.tsx
Redis/: Dockerfile  README.md  entrypoint.sh  redis.conf
Server/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
Server/src/: config.py  main.py
Server/src/db/: database.py  redis.py
Server/src/endpoints/: api.py  auth.py  user.py
Server/src/middle/: auth.py  user.py
Server/src/models/: db.py  error.py  seguradora.py  token.py  user.py
Server/tests/: middle_test.py  models_test.py
(+45 files in other folders)
